rename Cliente a Locador

--- a/AdmApp/AdmApp/Views/Shared/_Layout.cshtml
+++ b/AdmApp/AdmApp/Views/Shared/_Layout.cshtml
@@ -21,11 +21,11 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Indice", "Home")</li>
+                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Clientes", "About", "Cliente")</li>
-                    <li>@Html.ActionLink("Propiedades", "About", "Cliente")</li>
+                    <li>@Html.ActionLink("Locadores", "Index", "Locadores")</li>
+                    <li>@Html.ActionLink("Propiedades", "Index", "Propiedades")</li>
+                    <li>@Html.ActionLink("Inquilinos", "Index", "Inquilinos")</li>
                         @*<<li>@Html.Actionlink("clientes", "index", "cliente")</li>
                         li>@html.actionlink("courses", "index", "course")</li>
     <li>@html.actionlink("instructors", "index", "instructor")</li>
