--- a/AdmApp/AdmApp/Views/Locadores/Create.cshtml
+++ b/AdmApp/AdmApp/Views/Locadores/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model AdmApp.Models.Cliente
+﻿@model AdmApp.Models.Locador
 
 @{
     ViewBag.Title = "Create";
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Cliente</h4>
+        <h4>Locador</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
