--- a/AdmApp/AdmApp/Views/Locadores/Delete.cshtml
+++ b/AdmApp/AdmApp/Views/Locadores/Delete.cshtml
@@ -5,10 +5,10 @@
 }
 
 <h2>Delete</h2>
-<p class="error">@ViewBag.ErrorMessage</p>
+
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Cliente</h4>
+    <h4>Locador</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -25,6 +25,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.Apellido)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Email)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Email)
         </dd>
 
         <dt>
