--- a/AdmApp/AdmApp/Views/Locadores/Index.cshtml
+++ b/AdmApp/AdmApp/Views/Locadores/Index.cshtml
@@ -9,24 +9,19 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-@using (Html.BeginForm())
-{
-    <p>
-        Encontrar por Nombre: @Html.TextBox("SearchString")
-        <input type="submit" value="Search" />
-    </p>
-}
-
 <table class="table">
     <tr>
         <th>
-           @Html.ActionLink("Apellido", "Index", new { sortOrder = ViewBag.NameSortParm })
+            @Html.DisplayNameFor(model => model.Nombre)
         </th>
         <th>
-            Nombre
+            @Html.DisplayNameFor(model => model.Apellido)
         </th>
         <th>
-            @Html.ActionLink("Fecha Alta", "Index", new { sortOrder = ViewBag.DateSortParm })
+            @Html.DisplayNameFor(model => model.Email)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.FechaDeAlta)
         </th>
         <th></th>
     </tr>
@@ -34,10 +29,13 @@
 @foreach (var item in Model) {
     <tr>
         <td>
+            @Html.DisplayFor(modelItem => item.Nombre)
+        </td>
+        <td>
             @Html.DisplayFor(modelItem => item.Apellido)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Nombre)
+            @Html.DisplayFor(modelItem => item.Email)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.FechaDeAlta)
