prueba para deployar la db

--- a/AdmApp/AdmApp/Views/Locadores/Delete.cshtml
+++ b/AdmApp/AdmApp/Views/Locadores/Delete.cshtml
@@ -36,6 +36,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Telefono)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Telefono)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.FechaDeAlta)
         </dt>
 
