--- a/AdmApp/AdmApp/Views/Locadores/Details.cshtml
+++ b/AdmApp/AdmApp/Views/Locadores/Details.cshtml
@@ -42,8 +42,19 @@
             @Html.DisplayFor(model => model.FechaDeAlta)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.Telefono)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Telefono)
+        </dd>
+
+
+        <dt>
             @Html.DisplayNameFor(model => model.Propiedades)
         </dt>
+
+
         <dd>
             <table class="table">
                 <tr>
