--- a/AdmApp/AdmApp/Views/Locadores/Index.cshtml
+++ b/AdmApp/AdmApp/Views/Locadores/Index.cshtml
@@ -21,6 +21,9 @@
             @Html.DisplayNameFor(model => model.Email)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.Telefono)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.FechaDeAlta)
         </th>
         <th></th>
@@ -36,6 +39,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Email)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Telefono)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.FechaDeAlta)
