prueba de ultimos cambios

--- a/AdmApp/AdmApp/Views/Locadores/Details.cshtml
+++ b/AdmApp/AdmApp/Views/Locadores/Details.cshtml
@@ -35,13 +35,6 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.FechaDeAlta)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.FechaDeAlta)
-        </dd>
-        <dt>
             @Html.DisplayNameFor(model => model.Telefono)
         </dt>
 
@@ -49,7 +42,21 @@
             @Html.DisplayFor(model => model.Telefono)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Celular)
+        </dt>
 
+        <dd>
+            @Html.DisplayFor(model => model.Celular)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Observaciones)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Observaciones)
+        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Propiedades)
         </dt>
@@ -73,6 +80,14 @@
                     </tr>
                 }
             </table>
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.FechaDeAlta)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.FechaDeAlta)
         </dd>
 
     </dl>
