--- a/AdmApp/AdmApp/Views/Locadores/View.cshtml
+++ b/AdmApp/AdmApp/Views/Locadores/View.cshtml
@@ -1,10 +1,10 @@
 ﻿@model AdmApp.Models.Locador
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "View";
 }
 
-<h2>Create</h2>
+<h2>View</h2>
 
 
 @using (Html.BeginForm()) 
