--- a/AdmApp/AdmApp/Views/Locadores/Create.cshtml
+++ b/AdmApp/AdmApp/Views/Locadores/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AdmApp.Models.Locador
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Crear";
 }
 
 <h2>Create</h2>
@@ -80,7 +80,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Volver a la lista", "Index")
 </div>
 
 @section Scripts {
