--- a/AdmApp/AdmApp/Views/Locadores/Delete.cshtml
+++ b/AdmApp/AdmApp/Views/Locadores/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AdmApp.Models.Locador
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Borrar";
 }
 
 <h2>Delete</h2>
@@ -58,7 +58,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Volver a la lista", "Index")
         </div>
     }
 </div>
