--- a/AdmApp/AdmApp/Views/Shared/_Layout.cshtml
+++ b/AdmApp/AdmApp/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Locadores", "Index", "Locadores")</li>
-                    <li>@Html.ActionLink("Propiedades", "Index", "Propiedades")</li>
+                    <li>@Html.ActionLink("Propiedades", "Index", "Propiedad")</li>
                     <li>@Html.ActionLink("Inquilinos", "Index", "Inquilinos")</li>
                         @*<<li>@Html.Actionlink("clientes", "index", "cliente")</li>
                         li>@html.actionlink("courses", "index", "course")</li>
