nuevos campos para inquilino y locador

--- a/AdmApp/AdmApp/Views/Shared/_Layout.cshtml
+++ b/AdmApp/AdmApp/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Locadores", "Index", "Locadores")</li>
                     <li>@Html.ActionLink("Propiedades", "Index", "Propiedad")</li>
-                    <li>@Html.ActionLink("Inquilinos", "Index", "Inquilinos")</li>
+                    <li>@Html.ActionLink("Inquilinos", "Index", "Inquilino")</li>
                         @*<<li>@Html.Actionlink("clientes", "index", "cliente")</li>
                         li>@html.actionlink("courses", "index", "course")</li>
     <li>@html.actionlink("instructors", "index", "instructor")</li>
