--- a/AdmApp/AdmApp/Views/Inquilino/Index.cshtml
+++ b/AdmApp/AdmApp/Views/Inquilino/Index.cshtml
@@ -4,35 +4,55 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Inquilinos</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Nuevo +", "Create")
 </p>
+@using (Html.BeginForm())
+{
+    <p>
+        Buscar por apellido: @Html.TextBox("SearchString")
+        <input type="submit" value="Search" />
+    </p>
+}
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Nombre)
+            @Html.ActionLink("Apellido", "Index", new { sortOrder = ViewBag.NameSortParm })
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Apellido)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.FechaDeAlta)
+             @Html.DisplayNameFor(model => model.Nombre)
         </th>
-        <th></th>
+        <th>
+           @Html.DisplayNameFor(model => model.Email)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Telefono)
+        </th>
+
+        <th>@Html.DisplayNameFor(model => model.Celular)</th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Nombre)
-        </td>
-        <td>
             @Html.DisplayFor(modelItem => item.Apellido)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.FechaDeAlta)
+            @Html.DisplayFor(modelItem => item.Nombre)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Email)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Telefono)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Celular)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
