--- a/AdmApp/AdmApp/Views/Inquilino/Index.cshtml
+++ b/AdmApp/AdmApp/Views/Inquilino/Index.cshtml
@@ -17,24 +17,25 @@
     </p>
 }
 <table class="table">
-    <tr>
+    <tr><th>
+    @Html.ActionLink("Apellido", "Index", new { sortOrder = ViewBag.NameSortParm })
+</th>
         <th>
-            @Html.ActionLink("Apellido", "Index", new { sortOrder = ViewBag.NameSortParm })
+            @Html.DisplayNameFor(model => model.Nombre)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Apellido)
         </th>
         <th>
-             @Html.DisplayNameFor(model => model.Nombre)
-        </th>
-        <th>
-           @Html.DisplayNameFor(model => model.Email)
+            @Html.DisplayNameFor(model => model.Email)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Telefono)
         </th>
-
-        <th>@Html.DisplayNameFor(model => model.Celular)</th>
+        <th>
+            @Html.DisplayNameFor(model => model.Celular)
+        </th>
+        <th></th>
     </tr>
 
 @foreach (var item in Model) {
