actualizo las paginas de crud para inquilinos locadores y propiedades

--- a/AdmApp/AdmApp/Views/Propiedad/Edit.cshtml
+++ b/AdmApp/AdmApp/Views/Propiedad/Edit.cshtml
@@ -58,7 +58,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Volver a la lista", "Index")
 </div>
 
 @section Scripts {
