--- a/AdmApp/AdmApp/Views/Inquilino/Index.cshtml
+++ b/AdmApp/AdmApp/Views/Inquilino/Index.cshtml
@@ -23,10 +23,7 @@
         <th>
             @Html.DisplayNameFor(model => model.Nombre)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Apellido)
-        </th>
-        <th>
+ @*        <th>*@
             @Html.DisplayNameFor(model => model.Email)
         </th>
         <th>
@@ -56,9 +53,9 @@
             @Html.DisplayFor(modelItem => item.Celular)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
+            @Html.ActionLink("Editar", "Edit", new { id=item.ID }) |
+            @Html.ActionLink("Detalles", "Details", new { id=item.ID }) |
+            @Html.ActionLink("Borrar", "Delete", new { id=item.ID })
         </td>
     </tr>
 }
