arreglo las fallas en la edicion

--- a/AdmApp/AdmApp/Views/Inquilino/Create.cshtml
+++ b/AdmApp/AdmApp/Views/Inquilino/Create.cshtml
@@ -6,10 +6,10 @@
 
 <h2>Create</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
-
+    
     <div class="form-horizontal">
         <h4>Inquilino</h4>
         <hr />
@@ -87,5 +87,5 @@
 }
 
 <div>
-    @Html.ActionLink("Volver a la lista", "Index")
+    @Html.ActionLink("Back to List", "Index")
 </div>
