--- a/AdmApp/AdmApp/Views/Inquilino/Delete.cshtml
+++ b/AdmApp/AdmApp/Views/Inquilino/Delete.cshtml
@@ -77,13 +77,12 @@
 
     </dl>
 
-    @using (Html.BeginForm())
-    {
+    @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Volver a la lista", "Index")
+            @Html.ActionLink("Back to List", "Index")
         </div>
     }
 </div>
