--- a/AdmApp/AdmApp/Views/Inquilino/Edit.cshtml
+++ b/AdmApp/AdmApp/Views/Inquilino/Edit.cshtml
@@ -9,7 +9,7 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-
+    
     <div class="form-horizontal">
         <h4>Inquilino</h4>
         <hr />
@@ -89,5 +89,5 @@
 }
 
 <div>
-    @Html.ActionLink("Volver a la lista", "Index")
+    @Html.ActionLink("Back to List", "Index")
 </div>
