--- a/AdmApp/AdmApp/Views/Locadores/Create.cshtml
+++ b/AdmApp/AdmApp/Views/Locadores/Create.cshtml
@@ -1,16 +1,15 @@
 ﻿@model AdmApp.Models.Locador
 
 @{
-    ViewBag.Title = "Crear";
+    ViewBag.Title = "Create";
 }
 
 <h2>Create</h2>
 
-
-@using (Html.BeginForm())
+@using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
-
+    
     <div class="form-horizontal">
         <h4>Locador</h4>
         <hr />
@@ -56,6 +55,14 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.Direccion, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Direccion, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Direccion, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.Observaciones, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Observaciones, new { htmlAttributes = new { @class = "form-control" } })
@@ -80,9 +87,5 @@
 }
 
 <div>
-    @Html.ActionLink("Volver a la lista", "Index")
+    @Html.ActionLink("Back to List", "Index")
 </div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
