--- a/AdmApp/AdmApp/Views/Shared/_Layout.cshtml
+++ b/AdmApp/AdmApp/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
+                   @* <li>@Html.ActionLink("About", "About", "Home")</li>*@
                     <li>@Html.ActionLink("Locadores", "Index", "Locadores")</li>
                     <li>@Html.ActionLink("Propiedades", "Index", "Propiedad")</li>
                     <li>@Html.ActionLink("Inquilinos", "Index", "Inquilino")</li>
