--- a/AdmApp/AdmApp/Views/PeriodoContrato/Index.cshtml
+++ b/AdmApp/AdmApp/Views/PeriodoContrato/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<AdmApp.Models.Propiedad>
+﻿@model IEnumerable<AdmApp.Models.PeriodoContrato>
 
 @{
     ViewBag.Title = "Index";
@@ -12,16 +12,16 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.LocadorID)
+            @Html.DisplayNameFor(model => model.Referencia)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Calle)
+            @Html.DisplayNameFor(model => model.Monto)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Altura)
+            @Html.DisplayNameFor(model => model.FechaComienzo)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Observaciones)
+            @Html.DisplayNameFor(model => model.FechaFin)
         </th>
         <th></th>
     </tr>
@@ -29,16 +29,16 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.LocadorID)
+            @Html.DisplayFor(modelItem => item.Referencia)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Calle)
+            @Html.DisplayFor(modelItem => item.Monto)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Altura)
+            @Html.DisplayFor(modelItem => item.FechaComienzo)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Observaciones)
+            @Html.DisplayFor(modelItem => item.FechaFin)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
