--- a/AdmApp/AdmApp/Views/Contrato/Delete.cshtml
+++ b/AdmApp/AdmApp/Views/Contrato/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model AdmApp.Models.Propiedad
+﻿@model AdmApp.Models.Contrato
 
 @{
     ViewBag.Title = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Propiedad</h4>
+    <h4>Contrato</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -20,19 +20,43 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Calle)
+            @Html.DisplayNameFor(model => model.InquilinoID)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Calle)
+            @Html.DisplayFor(model => model.InquilinoID)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Altura)
+            @Html.DisplayNameFor(model => model.Referencia)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Altura)
+            @Html.DisplayFor(model => model.Referencia)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.GarantiaNombre)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.GarantiaNombre)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.GarantiaTelefono)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.GarantiaTelefono)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Vencimiento)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Vencimiento)
         </dd>
 
         <dt>
