--- a/AdmApp/AdmApp/Views/Pendiente/Delete.cshtml
+++ b/AdmApp/AdmApp/Views/Pendiente/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model AdmApp.Models.Propiedad
+﻿@model AdmApp.Models.Pendiente
 
 @{
     ViewBag.Title = "Delete";
@@ -8,31 +8,39 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Propiedad</h4>
+    <h4>Pendiente</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.LocadorID)
+            @Html.DisplayNameFor(model => model.Referencia)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.LocadorID)
+            @Html.DisplayFor(model => model.Referencia)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Calle)
+            @Html.DisplayNameFor(model => model.Monto)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Calle)
+            @Html.DisplayFor(model => model.Monto)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Altura)
+            @Html.DisplayNameFor(model => model.FechaEmision)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Altura)
+            @Html.DisplayFor(model => model.FechaEmision)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.FechaVencimiento)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.FechaVencimiento)
         </dd>
 
         <dt>
