--- a/AdmApp/AdmApp/Views/Contrato/Delete.cshtml
+++ b/AdmApp/AdmApp/Views/Contrato/Delete.cshtml
@@ -16,7 +16,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.LocadorID)
+            @(((ViewBag.locadores as ICollection<AdmApp.Models.Locador>).FirstOrDefault(loc => loc.ID == Model.LocadorID).Apellido))
         </dd>
 
         <dt>
@@ -24,7 +24,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.InquilinoID)
+            @(((ViewBag.inquilinos as ICollection<AdmApp.Models.Inquilino>).FirstOrDefault(inq => inq.ID == Model.InquilinoID).Apellido))
         </dd>
 
         <dt>
