--- a/AdmApp/AdmApp/Views/Pendiente/Details.cshtml
+++ b/AdmApp/AdmApp/Views/Pendiente/Details.cshtml
@@ -11,6 +11,30 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.Inquilino.Nombre)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Inquilino.Apellido)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Locador.Nombre)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Locador.Apellido)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.FechaEmision)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.FechaEmision)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Referencia)
         </dt>
 
@@ -24,14 +48,6 @@
 
         <dd>
             @Html.DisplayFor(model => model.Monto)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.FechaEmision)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.FechaEmision)
         </dd>
 
         <dt>
