--- a/AdmApp/AdmApp/Views/Pendiente/Index.cshtml
+++ b/AdmApp/AdmApp/Views/Pendiente/Index.cshtml
@@ -12,13 +12,19 @@
 <table class="table">
     <tr>
         <th>
+            @Html.DisplayNameFor(model => model.Inquilino.Nombre)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Locador.Nombre)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.FechaEmision)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Referencia)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Monto)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FechaEmision)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.FechaVencimiento)
@@ -32,13 +38,19 @@
 @foreach (var item in Model) {
     <tr>
         <td>
+            @Html.DisplayFor(modelItem => item.Inquilino.Apellido)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Locador.Apellido)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.FechaEmision)
+        </td>
+        <td>
             @Html.DisplayFor(modelItem => item.Referencia)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Monto)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FechaEmision)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.FechaVencimiento)
