--- a/AdmApp/AdmApp/Views/Pendiente/Index.cshtml
+++ b/AdmApp/AdmApp/Views/Pendiente/Index.cshtml
@@ -12,10 +12,10 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Inquilino.Nombre)
+            @Html.DisplayNameFor(model => model.InquilinoID)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Locador.Nombre)
+            @Html.DisplayNameFor(model => model.LocadorID)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.FechaEmision)
