--- a/AdmApp/AdmApp/Views/Contrato/Delete.cshtml
+++ b/AdmApp/AdmApp/Views/Contrato/Delete.cshtml
@@ -4,13 +4,21 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Eliminar</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Seguro que lo quiere eliminar?</h3>
 <div>
     <h4>Contrato</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.Propiedad.Calle)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Propiedad.Calle)
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.LocadorID)
         </dt>
@@ -24,7 +32,7 @@
         </dt>
 
         <dd>
-            @(((ViewBag.inquilinos as ICollection<AdmApp.Models.Inquilino>).FirstOrDefault(inq => inq.ID == Model.InquilinoID).Apellido))
+           @(((ViewBag.inquilinos as ICollection<AdmApp.Models.Inquilino>).FirstOrDefault(inq => inq.ID == Model.InquilinoID).Apellido))
         </dd>
 
         <dt>
