--- a/AdmApp/AdmApp/Views/Pendiente/Details.cshtml
+++ b/AdmApp/AdmApp/Views/Pendiente/Details.cshtml
@@ -11,7 +11,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Inquilino.Nombre)
+            @Html.DisplayNameFor(model => model.InquilinoID)
         </dt>
 
         <dd>
