--- a/AdmApp/AdmApp/Views/Propiedad/Create.cshtml
+++ b/AdmApp/AdmApp/Views/Propiedad/Create.cshtml
@@ -17,7 +17,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.LocadorID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                 @Html.DropDownListFor(model => model.LocadorID, new SelectList(ViewBag.inquilinos, "ID", "Nombre"), htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownListFor(model => model.LocadorID, new SelectList(ViewBag.locadores, "ID", "Apellido"), htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.LocadorID, "", new { @class = "text-danger" })
             </div>
         </div>
