--- a/AdmApp/AdmApp/Views/Propiedad/Delete.cshtml
+++ b/AdmApp/AdmApp/Views/Propiedad/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Eliminar</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Seguro que lo quiere eliminar?</h3>
 <div>
     <h4>Propiedad</h4>
     <hr />
@@ -16,7 +16,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.LocadorID)
+            @(((ViewBag.locadores as ICollection<AdmApp.Models.Locador>).FirstOrDefault(loc => loc.ID == Model.LocadorID).Apellido))
         </dd>
 
         <dt>
