--- a/AdmApp/AdmApp/Views/Propiedad/Details.cshtml
+++ b/AdmApp/AdmApp/Views/Propiedad/Details.cshtml
@@ -15,7 +15,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.LocadorID)
+            @(((ViewBag.locadores as ICollection<AdmApp.Models.Locador>).FirstOrDefault(loc => loc.ID == Model.LocadorID).Apellido))
         </dd>
 
         <dt>
