--- a/AdmApp/AdmApp/Views/Contacto/Delete.cshtml
+++ b/AdmApp/AdmApp/Views/Contacto/Delete.cshtml
@@ -1,13 +1,14 @@
-﻿@model AdmApp.Models.Locador
+﻿@model AdmApp.Models.Contacto
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Delete";
 }
 
-<h2>Details</h2>
+<h2>Delete</h2>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Locador</h4>
+    <h4>Contacto</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -24,6 +25,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.Apellido)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Ocupacion)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Ocupacion)
         </dd>
 
         <dt>
@@ -73,36 +82,15 @@
         <dd>
             @Html.DisplayFor(model => model.FechaDeAlta)
         </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Pendientes)
-        </dt>
-        <dd>
-            <table class="table">
-                <tr>
-                    <th>Pendiente</th>
-                    <th>Monto</th>
-                    <th>Observacion</th>
-                </tr>
-                @foreach (var item in Model.Pendientes)
-                {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Referencia)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Monto)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Observaciones)
-                        </td>
-                    </tr>
-                }
-            </table>
-        </dd>
 
     </dl>
+
+    @using (Html.BeginForm()) {
+        @Html.AntiForgeryToken()
+
+        <div class="form-actions no-color">
+            <input type="submit" value="Delete" class="btn btn-default" /> |
+            @Html.ActionLink("Back to List", "Index")
+        </div>
+    }
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
