--- a/AdmApp/AdmApp/Views/Pendiente/Create.cshtml
+++ b/AdmApp/AdmApp/Views/Pendiente/Create.cshtml
@@ -24,7 +24,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.LocadorID, "Locador", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.LocadorID, "LocadorID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("LocadorID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.LocadorID, "", new { @class = "text-danger" })
@@ -32,7 +32,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.InquilinoID, "Inquilino", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.InquilinoID, "InquilinoID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("InquilinoID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.InquilinoID, "", new { @class = "text-danger" })
