--- a/AdmApp/AdmApp/Views/Pendiente/Delete.cshtml
+++ b/AdmApp/AdmApp/Views/Pendiente/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Eliminar</h2>
+<h2>Delete</h2>
 
-<h3>Seguro que lo quiere eliminar?</h3>
+<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Pendiente</h4>
     <hr />
@@ -16,7 +16,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Inquilino.Apellido)
+            @Html.DisplayFor(model => model.Inquilino.Nombre)
         </dd>
 
         <dt>
@@ -24,7 +24,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Locador.Apellido)
+            @Html.DisplayFor(model => model.Locador.Nombre)
         </dd>
 
         <dt>
