--- a/AdmApp/AdmApp/Views/Pendiente/Details.cshtml
+++ b/AdmApp/AdmApp/Views/Pendiente/Details.cshtml
@@ -11,11 +11,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.InquilinoID)
+            @Html.DisplayNameFor(model => model.Inquilino.Nombre)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Inquilino.Apellido)
+            @Html.DisplayFor(model => model.Inquilino.Nombre)
         </dd>
 
         <dt>
@@ -23,7 +23,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Locador.Apellido)
+            @Html.DisplayFor(model => model.Locador.Nombre)
         </dd>
 
         <dt>
