--- a/AdmApp/AdmApp/Views/Pendiente/Delete.cshtml
+++ b/AdmApp/AdmApp/Views/Pendiente/Delete.cshtml
@@ -52,6 +52,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Estado)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Estado)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.FechaVencimiento)
         </dt>
 
