--- a/AdmApp/AdmApp/Views/Pendiente/Index.cshtml
+++ b/AdmApp/AdmApp/Views/Pendiente/Index.cshtml
@@ -27,6 +27,9 @@
             @Html.DisplayNameFor(model => model.Monto)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.Estado)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.FechaVencimiento)
         </th>
         <th>
@@ -51,6 +54,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Monto)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Estado)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.FechaVencimiento)
